# videoprocessor

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run.sh  setup.py  test_install.py  uninstall.sh  video-processor
config/: config.yaml
examples/: process_video.py
tests/: test_subtitle.py  test_subtitle_burn.py  test_subtitle_compose.py
tests/output/: test_subtitle.ass  test_subtitle.srt  test_subtitle_utf-8-sig.srt  test_subtitle_utf-8.srt
utils/: config.py  create_test_video.py  logger.py  validators.py
videoprocessor/: __init__.py  audio_extractor.py  cli.py  subtitle_generator.py  subtitle_processor.py  translation_service.py  tts_service.py  video_composer.py  video_processor.py
videoprocessor/styles/: subtitle_style.ass
videoprocessor/utils/: __init__.py  logger.py
